--- a/src/Tweedia/mainwindow.ui
+++ b/src/Tweedia/mainwindow.ui
@@ -83,7 +83,7 @@
          <item row="0" column="1">
           <widget class="QPushButton" name="pushButton_3">
            <property name="text">
-            <string>New</string>
+            <string>Add</string>
            </property>
           </widget>
          </item>
@@ -152,12 +152,12 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionNewObsobj"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
      <string>Edit</string>
     </property>
+    <addaction name="actionAddObsobj"/>
     <addaction name="actionDeleteObsobj"/>
    </widget>
    <widget class="QMenu" name="menuWindow">
@@ -222,9 +222,9 @@
     <string>open textview</string>
    </property>
   </action>
-  <action name="actionNewObsobj">
+  <action name="actionAddObsobj">
    <property name="text">
-    <string>New Obsobj</string>
+    <string>Add Obsobj</string>
    </property>
   </action>
   <action name="actionDeleteObsobj">
