--- a/src/Tweedia/mdichild/txtvw-stdout.ui
+++ b/src/Tweedia/mdichild/txtvw-stdout.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>240</width>
+    <width>242</width>
     <height>320</height>
    </rect>
   </property>
@@ -15,7 +15,11 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="1">
-    <widget class="QSpinBox" name="spinBox"/>
+    <widget class="QSpinBox" name="spinBox">
+     <property name="maximum">
+      <number>16777216</number>
+     </property>
+    </widget>
    </item>
    <item row="1" column="0" colspan="3">
     <widget class="QTextBrowser" name="textBrowser"/>
