--- a/src/Tweedia/mainwindow.ui
+++ b/src/Tweedia/mainwindow.ui
@@ -35,7 +35,7 @@
          <item row="0" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Command</string>
+            <string>Script</string>
            </property>
           </widget>
          </item>
@@ -154,6 +154,7 @@
     </property>
     <addaction name="actionOpenDatabase"/>
     <addaction name="actionInitialize_Database"/>
+    <addaction name="actionOpen_Script"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -252,6 +253,11 @@
   <action name="actionInitialize_Database">
    <property name="text">
     <string>Initialize Database</string>
+   </property>
+  </action>
+  <action name="actionOpen_Script">
+   <property name="text">
+    <string>Open Script</string>
    </property>
   </action>
  </widget>
