--- a/src/Tweedia/dlg-create-resulttable.ui
+++ b/src/Tweedia/dlg-create-resulttable.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>211</width>
+    <width>259</width>
     <height>115</height>
    </rect>
   </property>
@@ -34,7 +34,7 @@
    <item row="1" column="1">
     <widget class="QComboBox" name="comboBox"/>
    </item>
-   <item row="2" column="0" colspan="2">
+   <item row="2" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
