--- a/src/Tweedia/dlg-create-resulttable.ui
+++ b/src/Tweedia/dlg-create-resulttable.ui
@@ -22,7 +22,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="uiTableName"/>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
@@ -32,7 +32,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QComboBox" name="comboBox"/>
+    <widget class="QComboBox" name="uiTableType"/>
    </item>
    <item row="2" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
