Cutomize (multi-language, link for download, etc)

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -294,7 +294,8 @@ Full-Width Styles
 }
 
 #header_wrap .inner {
-  padding: 50px 10px 30px 10px;
+/*  padding: 50px 10px 30px 10px; */
+  padding: 50px 10px 10px 10px;
 }
 
 #project_title {
@@ -359,7 +360,8 @@ Full-Width Styles
 }
 
 #main_content {
-  padding-top: 40px;
+/*  padding-top: 40px; */
+  padding-top: 10px;
 }
 
 #footer_wrap {
