--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -254,6 +254,12 @@ form {
   padding: 20px;
 }
 
+#iconimg {
+  margin: 0px 10px -20px -5px;
+  border: none;
+  box-shadow: none;
+}
+
 /*******************************************************************************
 Full-Width Styles
 *******************************************************************************/
