--- a/src/Tweedia/mainwindow.ui
+++ b/src/Tweedia/mainwindow.ui
@@ -153,6 +153,7 @@
     <property name="title">
      <string>Window</string>
     </property>
+    <addaction name="actionOpen_TextView"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -215,11 +216,6 @@
   <action name="actionRefreash">
    <property name="text">
     <string>refreash</string>
-   </property>
-  </action>
-  <action name="actionOpen_textview">
-   <property name="text">
-    <string>open textview</string>
    </property>
   </action>
   <action name="actionAddObsobj">
