--- a/src/Tweedia/dlg-open-db.ui
+++ b/src/Tweedia/dlg-open-db.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>OpenDb</class>
- <widget class="QDialog" name="OpenDb">
+ <class>DlgOpenDb</class>
+ <widget class="QDialog" name="DlgOpenDb">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>321</width>
-    <height>165</height>
+    <height>168</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -77,7 +77,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>OpenDb</receiver>
+   <receiver>DlgOpenDb</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -93,7 +93,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>OpenDb</receiver>
+   <receiver>DlgOpenDb</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
