--- a/src/Tweedia/mainwindow.ui
+++ b/src/Tweedia/mainwindow.ui
@@ -153,7 +153,7 @@
     <property name="title">
      <string>Window</string>
     </property>
-    <addaction name="actionOpen_View_of_String_as_Page"/>
+    <addaction name="actionString_View_Page"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -233,14 +233,6 @@
     <string>Run Obsobj</string>
    </property>
   </action>
-  <action name="actionOpen_ViewString">
-   <property name="text">
-    <string>Open TextView</string>
-   </property>
-   <property name="visible">
-    <bool>true</bool>
-   </property>
-  </action>
   <action name="actionOpenDatabase">
    <property name="text">
     <string>Open Database</string>
@@ -291,9 +283,9 @@
     <string>Preferences</string>
    </property>
   </action>
-  <action name="actionOpen_View_of_String_as_Page">
+  <action name="actionString_View_Page">
    <property name="text">
-    <string>Open View of String as Page</string>
+    <string>String View (Page)</string>
    </property>
   </action>
  </widget>
