--- a/src/Tweedia/mdichild/stringview-page.ui
+++ b/src/Tweedia/mdichild/stringview-page.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ViewStringPage</class>
- <widget class="QWidget" name="ViewStringPage">
+ <class>StringviewPage</class>
+ <widget class="QWidget" name="StringviewPage">
   <property name="geometry">
    <rect>
     <x>0</x>
