--- a/src/Tweedia/mdichild/stringview-scroll.ui
+++ b/src/Tweedia/mdichild/stringview-scroll.ui
@@ -21,7 +21,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="0" column="1">
+    <widget class="QCheckBox" name="checkBox">
+     <property name="text">
+      <string>Show Number</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
     <widget class="QTableView" name="tableView"/>
    </item>
   </layout>
