--- a/src/Tweedia/dlg-create-tbl-observation.ui
+++ b/src/Tweedia/dlg-create-tbl-observation.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DlgCreateResultTable</class>
- <widget class="QDialog" name="DlgCreateResultTable">
+ <class>DlgCreateTblObservation</class>
+ <widget class="QDialog" name="DlgCreateTblObservation">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -51,7 +51,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>DlgCreateResultTable</receiver>
+   <receiver>DlgCreateTblObservation</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -67,7 +67,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>DlgCreateResultTable</receiver>
+   <receiver>DlgCreateTblObservation</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
