--- a/src/Tweedia/widget/wgt-page-string.ui
+++ b/src/Tweedia/widget/wgt-page-string.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>StringviewPage</class>
- <widget class="QWidget" name="StringviewPage">
+ <class>WgtPageString</class>
+ <widget class="QWidget" name="WgtPageString">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>287</width>
+    <width>291</width>
     <height>320</height>
    </rect>
   </property>
