--- a/src/Tweedia/widget/wgt-scroll-string.ui
+++ b/src/Tweedia/widget/wgt-scroll-string.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>StringviewScroll</class>
- <widget class="QWidget" name="StringviewScroll">
+ <class>WgtScrollString</class>
+ <widget class="QWidget" name="WgtScrollString">
   <property name="geometry">
    <rect>
     <x>0</x>
