--- a/src/Tweedia/widget/wgt-histgram-number.ui
+++ b/src/Tweedia/widget/wgt-histgram-number.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>320</width>
+    <width>480</width>
     <height>240</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QSpinBox" name="spinBox">
+  <widget class="QSpinBox" name="spinBox_Resolution">
    <property name="geometry">
     <rect>
      <x>130</x>
      <y>10</y>
-     <width>49</width>
-     <height>24</height>
+     <width>50</width>
+     <height>25</height>
     </rect>
    </property>
    <property name="minimum">
@@ -31,8 +31,8 @@
     <rect>
      <x>20</x>
      <y>10</y>
-     <width>101</width>
-     <height>21</height>
+     <width>111</width>
+     <height>22</height>
     </rect>
    </property>
    <property name="text">
